# src/unitysvc_sellers/_generated/models/body_seller_upload_file.py
@@ -1,0 +1,81 @@
+from __future__ import annotations
+
+from collections.abc import Mapping
+from io import BytesIO
+from typing import Any, TypeVar
+
+from attrs import define as _attrs_define
+from attrs import field as _attrs_field
+
+from .. import types
+from ..types import UNSET, File, Unset
+
+T = TypeVar("T", bound="BodySellerUploadFile")
+
+
+@_attrs_define
+class BodySellerUploadFile:
+    file: File
+    is_public: bool | Unset = True
+    additional_properties: dict[str, Any] = _attrs_field(init=False, factory=dict)
+
+    def to_dict(self) -> dict[str, Any]:
+        file = self.file.to_tuple()
+
+        is_public = self.is_public
+
+        field_dict: dict[str, Any] = {}
+        field_dict.update(self.additional_properties)
+        field_dict.update(
+            {
+                "file": file,
+            }
+        )
+        if is_public is not UNSET:
+            field_dict["is_public"] = is_public
+
+        return field_dict
+
+    def to_multipart(self) -> types.RequestFiles:
+        files: types.RequestFiles = []
+
+        files.append(("file", self.file.to_tuple()))
+
+        if not isinstance(self.is_public, Unset):
+            files.append(("is_public", (None, str(self.is_public).encode(), "text/plain")))
+
+        for prop_name, prop in self.additional_properties.items():
+            files.append((prop_name, (None, str(prop).encode(), "text/plain")))
+
+        return files
+
+    @classmethod
+    def from_dict(cls: type[T], src_dict: Mapping[str, Any]) -> T:
+        d = dict(src_dict)
+        file = File(payload=BytesIO(d.pop("file")))
+
+        is_public = d.pop("is_public", UNSET)
+
+        body_seller_upload_file = cls(
+            file=file,
+            is_public=is_public,
+        )
+
+        body_seller_upload_file.additional_properties = d
+        return body_seller_upload_file
+
+    @property
+    def additional_keys(self) -> list[str]:
+        return list(self.additional_properties.keys())
+
+    def __getitem__(self, key: str) -> Any:
+        return self.additional_properties[key]
+
+    def __setitem__(self, key: str, value: Any) -> None:
+        self.additional_properties[key] = value
+
+    def __delitem__(self, key: str) -> None:
+        del self.additional_properties[key]
+
+    def __contains__(self, key: str) -> bool:
+        return key in self.additional_properties
